--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@
         <p><img src="/images/others/CCTMC01.jpg" alt="" /></p>
 
 <p><center>CCTMC is one of the best Toastmasters clubs in Beijing. If you want to join our club, please reach us at:</center>
-<center>VPPR: BingJie</center>
+<center>VPM: BingJie</center>
 <center>Phone: 15901026334</center>
 <center>WeChat: bingjiezainali</center>
 <center>Our avenue:</center></p>
