Latest generated static page files

--- a/officers/index.html
+++ b/officers/index.html
@@ -168,7 +168,7 @@
         <!-- ![](/images/officers/Hana.jpeg) -->
 
 <p><center>
-<img style="width: 50%;height: 50%;"src="/images/officers/Hana.jpeg"></p>
+<img style="width: 50%;height: 50%;"src="/images/officers/Hana_new.jpeg"></p>
 
 <p><strong>Hana</strong>: President
 </center></p>
